API:  qr code integrating memebershipId already exisiting one completed
